- Finished implementation of HTML slideshow creation

Reggie, 3.5.1999:
-----------------
- Added PNG to filters when opening KFileDialog for opening a pic
- Fixes in pixmap loading

Reggie, 4.5.1999:
-----------------
- HTML Sideshow generation tries now to find titles for the slides
  with looking through the text objects of each slide itself
  (No "Slide_X" deafult titles anymore :-)
- Some cosmetic fixes in the HTML Slidshow generation dialogs

Reggie, 5.5.1999:
-----------------
- Started implementing footers and headers
- Fixed a mem leak

Reggie, 6.5.1999:
-----------------
- More work on headers and footers
- KTextObject knows now if it was modified

Reggie, 7.5.1999:
-----------------
- More work and headers and footers

Reggie, 8.5.1999:
-----------------
- More work and headers and footers

Reggie, 9.5.1999:
-----------------
- Implemented loading/saving headers and footers
- Headers/Footers are correctly drawn in screen presentations now

Reggie, 10.5.1999:
------------------
- More work on editing headers/footers
- Implemented "Extend contents to object height" feature for textobjects
  (this means the linespacing/paragraphspacing is set to values then,
   so that the text fills the whole object rectangle)

Reggie, 12.5.1999:
------------------
- DnD Fixes
- Implemented configuration of background and frame for headers and footers

Reggie, 13.5.1999:
------------------
- Implemented font/paragraph configuration in the footer/header editor

Reggie, 15.5.1999:
------------------
- Big code cleanups:
  - Using a better readable coding style
  - Lots of classes were derived from QObject but didn't
    make any use of that => these classes aren't derived from
    QObject anymore and no moc files are creaded for these
    classes anymore => faster compilation
  - Fixed includes (Only really neccessary headers are included in the .h files)
- Fixes for Unicode
- Some focus handling fixes
- Fix for loading pixmaps
- Fixed calcutaion of current page number