@@ -35,26 +35,12 @@ KPPixmap::KPPixmap( QString _filename, KSize _size )
 {
 	QFileInfo fileInfo( filename );
 	
-	QCString str;
-	QBuffer buf( str );
- 	buf.open( IO_WriteOnly );
-// 	QImageIO io( &buf, "XPM" );
-// 	io.setImage( orig_pixmap.convertToImage() );
-// 	io.write();
-	
-// 	QImageIO io;
-// 	QImage img;
-// 	img = orig_pixmap;
-// 	io.setImage( img );
-// 	io.setIODevice( &buf );
-// 	io.setFormat( "XPM" );
-// 	io.write();
-	
- 	QString fn= "/tmp/kpresenter.xpm";
- 	pixmap.save( fn, "XPM" );
+ 	QString fn = "/tmp/kpresenter.xpm";
+	if ( fileInfo.extension().lower() == "xpm" )
+		fn = filename;
+ 	else
+		pixmap.save( fn, "XPM" );
 
-//	printf( "%s\n", str.data() );
-	
 	data = load_pixmap_native_format( fn );
 
 	if ( _size != pixmap.size() && _size != orig_size && pixmap.width() != 0 && pixmap.height() != 0 )
